apps/whoami/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami
  namespace: whoami
spec:
  rules:
    - host: whoami.ctnr.cloud
      http:
        paths:
          - backend:
              service:
                name: whoami
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - whoami.ctnr.cloud
      secretName: whoami-cert
